force-app/main/default/objects/Case/fields/Autorun_GPTfy__c.field-meta.xml
<CustomField>
    <fullName>Autorun_GPTfy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this flag to invoke GPTfy automation via Flow. Do NOT Remove.</description>
    <inlineHelpText>Use this flag to invoke GPTfy automation via Flow.</inlineHelpText>
    <label>Autorun GPTfy</label>
    <type>Checkbox</type>
</CustomField>