force-app/main/default/objects/Case/fields/GPTfy_Assignment_JSON__c.field-meta.xml
<CustomField>
    <fullName>GPTfy_Assignment_JSON__c</fullName>
    <label>Assignment JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>