force-app/main/default/objects/Case/fields/GPTfy_Language__c.field-meta.xml
<CustomField>
    <fullName>GPTfy_Language__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>