force-app/main/default/objects/Case/fields/GPTfy_Root_Cause_Analysis__c.field-meta.xml
<CustomField>
    <fullName>GPTfy_Root_Cause_Analysis__c</fullName>
    <label>Root Cause Analysis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>