force-app/main/default/objects/Case/fields/GPTfy_Root_Cause_Reason__c.field-meta.xml
<CustomField>
    <fullName>GPTfy_Root_Cause_Reason__c</fullName>
    <description>Hardware
Firmware
Incorrect Installation</description>
    <label>Root Cause Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Firmware</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>