force-app/main/default/objects/Case/fields/GPTFy_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>GPTFy_Sentiment__c</fullName>
    <label>Sentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>