force-app/main/default/objects/Case/fields/GPTfy_Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>GPTfy_Sentiment_Score__c</fullName>
    <label>Sentiment Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>