force-app/main/default/objects/Case/fields/PII_SSN__c.field-meta.xml
<CustomField>
    <fullName>PII_SSN__c</fullName>
    <label>PII SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>