force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GC1040</fullName>
            </value>
            <value>
                <fullName>GC1060</fullName>
            </value>
            <value>
                <fullName>GC3020</fullName>
            </value>
            <value>
                <fullName>GC3040</fullName>
            </value>
            <value>
                <fullName>GC3060</fullName>
            </value>
            <value>
                <fullName>GC5020</fullName>
            </value>
            <value>
                <fullName>GC5040</fullName>
            </value>
            <value>
                <fullName>GC5060</fullName>
            </value>
            <value>
                <fullName>GC1020</fullName>
            </value>
            <value>
                <fullName>Nest Learning Thermostat</fullName>
            </value>
            <value>
                <fullName>Nest Thermostat</fullName>
            </value>
            <value>
                <fullName>Nest Temperature Sensor</fullName>
            </value>
            <value>
                <fullName>Nest Thermostat Trim Kit</fullName>
            </value>
            <value>
                <fullName>Nest Power Connector</fullName>
            </value>
            <value>
                <fullName>AUTOGEN EL ICD</fullName>
            </value>
            <value>
                <fullName>DYNAGEN ELICD</fullName>
            </value>
            <value>
                <fullName>DYNAGEN MINI ICD</fullName>
            </value>
            <value>
                <fullName>INOGEN EL ICD</fullName>
            </value>
            <value>
                <fullName>INOGEN MINI ICD</fullName>
            </value>
            <value>
                <fullName>ORIGEN EL ICD</fullName>
            </value>
            <value>
                <fullName>ORIGEN MINI ICD</fullName>
            </value>
            <value>
                <fullName>INCEPTA ICD</fullName>
            </value>
            <value>
                <fullName>I ENERGEN ICD</fullName>
            </value>
            <value>
                <fullName>PUNCTUA ICD</fullName>
            </value>
            <value>
                <fullName>TELIGEN 100 ICD</fullName>
            </value>
            <value>
                <fullName>Elecsys β-Amyloid (1-42) CSF II</fullName>
            </value>
            <value>
                <fullName>DYNAGEN EL ICD</fullName>
            </value>
            <value>
                <fullName>ANTHEM PS/CR Total Knee System</fullName>
            </value>
            <value>
                <fullName>Square D 9420 CT Switch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>