force-app/main/default/objects/Case/fields/Proposed_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Resolution__c</fullName>
    <label>Proposed Resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>